--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
 
-    <head>
-        <title>Rango</title>
-    </head>
+    About Rango
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            here is the about page. <br />
-            <strong>This tutorial has been put together by Alaa Wardeh</strong><br />
-        </div>
+{% endblock %}
 
-        <div>
-            <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
-            
-        </div>
-    </body>
+{% block body_block %}
 
-</html> 
+<h1>Rango says...</h1>
+
+<div>
+    here is the about page. <br />
+    This tutorial has been put together by David Maxwell.<br />
+</div>
+
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+
+{% endblock %}
