--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,7 +14,8 @@
 
 <div>
     here is the about page. <br />
-    This tutorial has been put together by David Maxwell.<br />
+    This tutorial has been put together by Alaa Wardeh.<br />
+    <p>Visits: {{ visits }}</p>
 </div>
 
 <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
